...
                        android:hint="Confirma tu contraseña"
                        android:inputType="textPassword"
                        android:textColorHint="@color/gray_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Crear cuenta"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
...
